<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.14</version>
        <relativePath/>
    </parent>

    <groupId>unical.it</groupId>
    <artifactId>tripflow-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>TripFlow Parent Monorepo</name>

    <properties>
        <java.version>17</java.version>
    </properties>

    <modules>
        <module>user-auth-service</module>
        <module>catalog-service</module>
        <module>review-service</module>
        <module>booking-service</module>
        <module>itinerary-service</module>
    </modules>

</project>